# remote-config-lib

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  deploy.bat
src/: remote_config.cpp
src/include/: remote_config.h
test/: remote_config_test.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
